--- a/app/src/main/res/layout/activity_rentinglist.xml
+++ b/app/src/main/res/layout/activity_rentinglist.xml
@@ -8,13 +8,14 @@
     tools:context=".MainActivity">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/pay1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        app:cardBackgroundColor="@color/white"
+        app:cardBackgroundColor="@color/material_dynamic_neutral_variant70"
         app:cardCornerRadius="20dp"
         app:cardElevation="10dp"
         app:cardMaxElevation="12dp"
@@ -35,36 +36,45 @@
             android:id="@+id/img"
             android:layout_width="144dp"
             android:layout_height="159dp"
-            android:src="@drawable/housezero"
             android:layout_gravity="left"
             android:layout_margin="10dp"
-            android:contentDescription="@string/app_name" />
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/housezero" />
 
 
-        <EditText
+        <TextView
             android:id="@+id/zero"
             android:layout_width="wrap_content"
             android:layout_height="160dp"
             android:layout_gravity="right"
             android:layout_margin="10dp"
+            android:text=" location and price"
+            android:inputType="none"
+            android:textSize="24sp"
+            android:textStyle="italic" />
 
-
-            android:text=" location an price"
-            android:textSize="24sp" />
-
-
+        <Button
+            android:id="@+id/uno"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_margin="16dp"
+            android:background="@color/material_dynamic_primary80"
+            android:text="Rent"
+            android:textStyle="italic" />
 
 
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/pay2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="200dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        app:cardBackgroundColor="@color/white"
+        app:cardBackgroundColor="@color/material_dynamic_neutral_variant70"
         app:cardCornerRadius="20dp"
         app:cardElevation="10dp"
         app:cardMaxElevation="12dp"
@@ -85,34 +95,45 @@
 
             android:layout_width="144dp"
             android:layout_height="159dp"
-            android:src="@drawable/houseone"
             android:layout_gravity="left"
             android:layout_margin="10dp"
-            android:contentDescription="@string/app_name" />
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/houseone" />
 
 
-        <EditText
+        <TextView
 
             android:id="@+id/one"
             android:layout_width="wrap_content"
             android:layout_height="160dp"
             android:layout_gravity="right"
             android:layout_margin="10dp"
-
-
-            android:text=" location an price"
-            android:textSize="24sp" />
+            android:inputType="none"
+            android:text=" location and price"
+            android:textSize="24sp"
+            android:textStyle="italic" />
+        <Button
+            android:id="@+id/dos"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_margin="16dp"
+            android:background="@color/material_dynamic_primary80"
+            android:text="Rent"
+            android:textStyle="italic" />
 
 
     </androidx.cardview.widget.CardView>
+
     <androidx.cardview.widget.CardView
+        android:id="@+id/pay3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="400dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        app:cardBackgroundColor="@color/white"
+        app:cardBackgroundColor="@color/material_dynamic_neutral_variant70"
         app:cardCornerRadius="20dp"
         app:cardElevation="10dp"
         app:cardMaxElevation="12dp"
@@ -135,19 +156,30 @@
             android:layout_height="159dp"
             android:layout_gravity="left"
             android:layout_margin="10dp"
-            android:src="@drawable/housetwo"
-            android:contentDescription="@string/app_name" />
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/housetwo" />
 
 
-        <EditText
+        <TextView
 
             android:id="@+id/two"
             android:layout_width="wrap_content"
             android:layout_height="160dp"
             android:layout_gravity="right"
             android:layout_margin="10dp"
-            android:text=" location an price"
-            android:textSize="24sp" />
+            android:text=" location and price"
+            android:inputType="none"
+            android:textSize="24sp"
+            android:textStyle="italic" />
+        <Button
+            android:id="@+id/tres"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_margin="16dp"
+            android:background="@color/material_dynamic_primary80"
+            android:text="Rent"
+            android:textStyle="italic" />
 
 
     </androidx.cardview.widget.CardView>
